--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,3 +5,9 @@
   source_URL: https://github.com/MamoonaRamzan/Datasets/raw/refs/heads/main/Brain%20tumor%20Dataset.zip
   local_data_files: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
+
+
+ prepare_base_model:
+  root_dir: artifacts/prepare_base_model
+  base_model_path: artifacts/prepare_base_model/base_model.h5
+  updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
